# atzar

./: .gitignore  README.md  pyproject.toml  run.command  weekly_selection.py
.github/workflows/: update.yml
notebooks/: probability_of_duplicates.ipynb  update_weekly_playlist.ipynb
src/atzar/: auth.py  main.py  playlist.py
tests/: test_playlist.py
